# cmake-sonar-phony

./: CMakeLists.txt
daemon/: CMakeLists.txt  daemon.cpp  daemon.h  main.cpp
include/: message.h  pingMsg.h  sonarConnection.h
